Versión tablet y web de la sección fortalezas y debilidades

--- a/src/html/partials/who_is_who.html
+++ b/src/html/partials/who_is_who.html
@@ -12,7 +12,8 @@
                 <ul class="social-media-list">
                     <li class="icon-dot"> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
                     <li class="icon-dot"> <a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-github-alt"></i></a></li>
+                    <li class="icon-dot"> <a href="https://github.com/Garcia-Laura"><i
+                                class="fa-brands fa-github-alt"></i></a></li>
                     <li> <a href=""><i class="fa-solid fa-envelope"></i></a></li>
                 </ul>
             </nav>
@@ -30,10 +31,13 @@
                 disfrutemos del camino.</p>
             <nav>
                 <ul class="social-media-list">
-                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
-                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-github-alt"></i></a></li>
-                    <li> <a href=""><i class="fa-solid fa-envelope"></i></a></li>
+                    <li class="icon-dot"> <a href="https://twitter.com/BeGaVi1234"><i
+                                class="fa-brands fa-twitter"></i></a></li>
+                    <li class="icon-dot"> <a href="https://www.linkedin.com/in/bella-garcia-villegas-64732ab7/"><i
+                                class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li class="icon-dot"> <a href="https://github.com/bellita85"><i
+                                class="fa-brands fa-github-alt"></i></a></li>
+                    <li> <a href="bellagarcia1985@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
                 </ul>
             </nav>
         </div>
@@ -51,11 +55,13 @@
                 montaña, los animales y las fiestas de cumpleaños con disfraces.</p>
             <nav>
                 <ul class="social-media-list">
-                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                    <li class="icon-dot"> <a href="https://twitter.com/mhm_is_back"><i
+                                class="fa-brands fa-twitter"></i></a></li>
                     <li class="icon-dot"> <a href="https://www.linkedin.com/in/monica-hidalgo-martin-6654a684/"><i
                                 class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-github-alt"></i></a></li>
-                    <li> <a href=""><i class="fa-solid fa-envelope"></i></a></li>
+                    <li class="icon-dot"> <a href="https://github.com/mhidalgoma"><i
+                                class="fa-brands fa-github-alt"></i></a></li>
+                    <li> <a href="monicahidalgomartin@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
                 </ul>
             </nav>
         </div>
@@ -74,7 +80,8 @@
                 <ul class="social-media-list">
                     <li class="icon-dot"> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
                     <li class="icon-dot"> <a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-github-alt"></i></a></li>
+                    <li class="icon-dot"> <a href="https://github.com/BarbaraGB1"><i
+                                class="fa-brands fa-github-alt"></i></a></li>
                     <li> <a href=""><i class="fa-solid fa-envelope"></i></a></li>
                 </ul>
             </nav>
