--- a/src/html/partials/strengths_weaknesses.html
+++ b/src/html/partials/strengths_weaknesses.html
@@ -1,19 +1,19 @@
 <section class="strengths-weaknesses">
-    <article>
+    <article class="strengths">
         <h3 class="caracteristicas">Fortalezas</h3>
         <p class="parrafo">
 
-            Somos cuatro mujeres valientes, que no tenemos miedo a los cambios.
-            Decidadas, apostamos por aquello que nos hace feliz.
-            Con gran flexibilidad mental que nos facilita gran adaptación al cambio y al trabajo en equipo.
-            Y por supuesto, con muchísimas ganas de aprender.
+            Somos cuatro mujeres valientes y sin miedo a los cambios.
+            Somos decididas y apostamos por aquello que nos hace felices. Nos sentimos orgullosas de nuestra
+            flexibilidad mental porque nos aporta una gran adaptabilidad al cambio y al trabajo en equipo.
+            Y por supuesto, nuestra fortaleza más grande es nuestras ganas de aprender.
         </p>
     </article>
-    <article>
+    <article class="weaknesses">
         <h3 class="caracteristicas">Debilidades</h3>
         <p class="parrafo">Somos cuatro profesionales que vienen de campos muy distintos por lo que nuestra
-            debilidad principal sería la falta de experiencia laboral relacionada con la programación web. Sin
-            embargo, tenemos que decir también que estamos convencidas de que las ganas y la motivación que
-            tenemos podrá suplir esas carencias que vienen de la falta de experiencia. </p>
+            debilidad principal es la falta de experiencia laboral relacionada con la programación web. Sin
+            embargo, estamos convencidas de que las ganas y la motivación que tenemos podrá suplir esas carencias que
+            vienen de la falta de experiencia. </p>
     </article>
 </section>
