--- a/src/scss/layout/_contacto.scss
+++ b/src/scss/layout/_contacto.scss
@@ -1,3 +1,89 @@
-.provisional {
-  height: 1001px;
+.contact__page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px;
+}
+.contact__form {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  gap: 10px;
+  font-family: "Open Sans", sans-serif;
+  color: #54585a;
+  width: 100%;
+  padding: 15px;
+}
+.contact__title {
+  font-family: "Rubik", Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 24px;
+  text-align: center;
+  color: var(--blue-green);
+  text-transform: uppercase;
+  margin-top: 30px;
+}
+.contact__text {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  text-align: center;
+  line-height: 24px;
+  color: #54585a;
+  margin: 15px 15px 0px 15px;
+}
+.contact__small {
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+  text-align: center;
+  line-height: 24px;
+  color: #54585a;
+  margin: 20px 15px 30px 15px;
+}
+.contact__form--label {
+  margin-top: 12px;
+}
+.contact__form--input {
+  padding: 15px;
+}
+.contact__asterisk {
+  color: var(--aqua);
+}
+.contact__form--submit {
+  background-color: var(--blue-green);
+  color: white;
+  border: 0;
+  border-radius: 2px;
+  padding: 15px;
+  margin-top: 20px;
+  font-family: "Rubik", Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+.contact__email-phone {
+  display: flex;
+  flex-direction: column;
+}
+.label__email,
+.label__phone {
+  margin-bottom: 12px;
+}
+.label__phone {
+  margin-top: 25px;
+}
+
+@media all and (min-width: 768px) {
+  .contact__page {
+    width: 60%;
+  }
+  .contact__main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .contact__form--submit {
+    width: 45%;
+    align-self: flex-end;
+    margin-bottom: 40px;
+  }
 }
