restaurar media web

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -74,6 +74,8 @@
     padding-left: 142px;
   }
   .nav-header {
-    padding-right: 142px;
+    gap: 20px;
+    display: flex;
+    justify-content: center;
   }
 }
