--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -7,5 +7,5 @@
             <li><a class="enlace3" href="./contact.html" target="_blank">Contacto</a></li>
         </ul>
     </nav>
-    <img class="logo" src="./assets/images/logo-adalab.png" alt="Logo Adalab">
+    <a href="./index.html"><img class="logo" src="./assets/images/logo-adalab.png" alt="Logo Adalab"></a>
 </footer>
