--- a/src/html/partials/who_is_who.html
+++ b/src/html/partials/who_is_who.html
@@ -10,10 +10,10 @@
             </p>
             <nav>
                 <ul class="social-media-list">
-                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
-                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li class="icon-dot"> <a href="https://github.com/Garcia-Laura"><i
-                                class="fa-brands fa-github-alt"></i></a></li>
+                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-twitter" target="_blank"></i></a></li>
+                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-linkedin-in" target="_blank"></i></a></li>
+                    <li class="icon-dot"> <a href="https://github.com/Garcia-Laura" target="_blank"><i
+                                class="fa-brands fa-github-alt" target="_blank"></i></a></li>
                     <li> <a href=""><i class="fa-solid fa-envelope"></i></a></li>
                 </ul>
             </nav>
@@ -31,13 +31,14 @@
                 disfrutemos del camino.</p>
             <nav>
                 <ul class="social-media-list">
-                    <li class="icon-dot"> <a href="https://twitter.com/BeGaVi1234"><i
+                    <li class="icon-dot"> <a href="https://twitter.com/BeGaVi1234" target="_blank"><i
                                 class="fa-brands fa-twitter"></i></a></li>
-                    <li class="icon-dot"> <a href="https://www.linkedin.com/in/bella-garcia-villegas-64732ab7/"><i
-                                class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li class="icon-dot"> <a href="https://github.com/bellita85"><i
+                    <li class="icon-dot"> <a href="https://www.linkedin.com/in/bella-garcia-villegas-64732ab7/"
+                            target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li class="icon-dot"> <a href="https://github.com/bellita85" target="_blank"><i
                                 class="fa-brands fa-github-alt"></i></a></li>
-                    <li> <a href="bellagarcia1985@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+                    <li> <a href="bellagarcia1985@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -55,13 +56,14 @@
                 montaña, los animales y las fiestas de cumpleaños con disfraces.</p>
             <nav>
                 <ul class="social-media-list">
-                    <li class="icon-dot"> <a href="https://twitter.com/mhm_is_back"><i
+                    <li class="icon-dot"> <a href="https://twitter.com/mhm_is_back" target="_blank"><i
                                 class="fa-brands fa-twitter"></i></a></li>
-                    <li class="icon-dot"> <a href="https://www.linkedin.com/in/monica-hidalgo-martin-6654a684/"><i
-                                class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li class="icon-dot"> <a href="https://github.com/mhidalgoma"><i
+                    <li class="icon-dot"> <a href="https://www.linkedin.com/in/monica-hidalgo-martin-6654a684/"
+                            target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li class="icon-dot"> <a href="https://github.com/mhidalgoma" target="_blank"><i
                                 class="fa-brands fa-github-alt"></i></a></li>
-                    <li> <a href="monicahidalgomartin@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+                    <li> <a href="monicahidalgomartin@gmail.com" target="_blank"><i
+                                class="fa-solid fa-envelope"></i></a></li>
                 </ul>
             </nav>
         </div>
@@ -78,9 +80,11 @@
                 de todas las discriminaciones.</p>
             <nav>
                 <ul class="social-media-list">
-                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-twitter"></i></a></li>
-                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li class="icon-dot"> <a href="https://github.com/BarbaraGB1"><i
+                    <li class="icon-dot"> <a href="https://twitter.com/barbii_peque" target="_blank"><i
+                                class="fa-brands fa-twitter"></i></a></li>
+                    <li class="icon-dot"> <a href="https://www.linkedin.com/?trk=seo-authwall-base_nav-header-logo"
+                            target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li class="icon-dot"> <a href="https://github.com/BarbaraGB1" target="_blank"><i
                                 class="fa-brands fa-github-alt"></i></a></li>
                     <li> <a href=""><i class="fa-solid fa-envelope"></i></a></li>
                 </ul>
