Título del hero en la foto

--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,6 +1,6 @@
 /* HERO */
 .hero {
-  background-image: url(../images/man-jump-through-gap-hill-man-jumping-cliff-blue-sky-business-concept-idea.jpg);
+  background-image: url(../images/jump.png);
   background-position: center;
   background-size: cover;
   top: 0px;
