--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -2,9 +2,11 @@
     <h1 class="h1">Leap of faith</h1>
     <nav class="nav-header">
         <ul class="ul-nav-cabecera">
-            <li class="link"><a class="enlace-nav" href="./index.html#Equipo">Equipo</a></li>
-            <li class="link"><a class="enlace-nav" href="./index.html#Quienes-somos">Quiénes somos</a></li>
-            <li class="link"><a class="enlace-nav" href="./contact.html" target="_blank">Contacto</a></li>
+            <li class="link"><a title="Ir a Equipo" class="enlace-nav" href="./index.html#Equipo">Equipo</a></li>
+            <li class="link"><a title="Ir a Quiénes somos" class="enlace-nav" href="./index.html#Quienes-somos">Quiénes
+                    somos</a></li>
+            <li class="link"><a title="Ir a Contacto" class="enlace-nav" href="./contact.html"
+                    target="_blank">Contacto</a></li>
         </ul>
     </nav>
 </header>
