--- a/src/html/partials/who_is_who.html
+++ b/src/html/partials/who_is_who.html
@@ -10,11 +10,15 @@
             </p>
             <nav>
                 <ul class="social-media-list">
-                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-twitter" target="_blank"></i></a></li>
-                    <li class="icon-dot"> <a href=""><i class="fa-brands fa-linkedin-in" target="_blank"></i></a></li>
-                    <li class="icon-dot"> <a href="https://github.com/Garcia-Laura" target="_blank"><i
-                                class="fa-brands fa-github-alt" target="_blank"></i></a></li>
-                    <li> <a href=""><i class="fa-solid fa-envelope"></i></a></li>
+                    <li class="icon-dot"> <a title="Ir a twitter" href=""><i class="fa-brands fa-twitter"
+                                target="_blank"></i></a></li>
+                    <li class="icon-dot"> <a title="Ir a linkedin"
+                            href="https://www.linkedin.com/in/laura-garc%C3%ADa-1174b37b/"><i
+                                class="fa-brands fa-linkedin-in" target="_blank"></i></a></li>
+                    <li class="icon-dot"> <a title="Ir a github" href="https://github.com/Garcia-Laura"
+                            target="_blank"><i class="fa-brands fa-github-alt" target="_blank"></i></a></li>
+                    <li> <a title=" ir a email" href="lgarciacuello@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -31,11 +35,12 @@
                 disfrutemos del camino.</p>
             <nav>
                 <ul class="social-media-list">
-                    <li class="icon-dot"> <a href="https://twitter.com/BeGaVi1234" target="_blank"><i
-                                class="fa-brands fa-twitter"></i></a></li>
-                    <li class="icon-dot"> <a href="https://www.linkedin.com/in/bella-garcia-villegas-64732ab7/"
-                            target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li class="icon-dot"> <a href="https://github.com/bellita85" target="_blank"><i
+                    <li class="icon-dot"> <a title="Ir a twitter" href="https://twitter.com/BeGaVi1234"
+                            target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li class="icon-dot"> <a title="Ir a linkedin"
+                            href="https://www.linkedin.com/in/bella-garcia-villegas-64732ab7/" target="_blank"><i
+                                class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li class="icon-dot"> <a title="Ir a github" href="https://github.com/bellita85" target="_blank"><i
                                 class="fa-brands fa-github-alt"></i></a></li>
                     <li> <a href="bellagarcia1985@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
                     </li>
@@ -56,11 +61,12 @@
                 montaña, los animales y las fiestas de cumpleaños con disfraces.</p>
             <nav>
                 <ul class="social-media-list">
-                    <li class="icon-dot"> <a href="https://twitter.com/mhm_is_back" target="_blank"><i
-                                class="fa-brands fa-twitter"></i></a></li>
-                    <li class="icon-dot"> <a href="https://www.linkedin.com/in/monica-hidalgo-martin-6654a684/"
-                            target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li class="icon-dot"> <a href="https://github.com/mhidalgoma" target="_blank"><i
+                    <li class="icon-dot"> <a title="Ir a twitter" href="https://twitter.com/mhm_is_back"
+                            target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li class="icon-dot"> <a title="Ir a linkedin"
+                            href="https://www.linkedin.com/in/monica-hidalgo-martin-6654a684/" target="_blank"><i
+                                class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li class="icon-dot"> <a title="Ir a github" href="https://github.com/mhidalgoma" target="_blank"><i
                                 class="fa-brands fa-github-alt"></i></a></li>
                     <li> <a href="monicahidalgomartin@gmail.com" target="_blank"><i
                                 class="fa-solid fa-envelope"></i></a></li>
@@ -80,13 +86,14 @@
                 de todas las discriminaciones.</p>
             <nav>
                 <ul class="social-media-list">
-                    <li class="icon-dot"> <a href="https://twitter.com/barbii_peque" target="_blank"><i
-                                class="fa-brands fa-twitter"></i></a></li>
-                    <li class="icon-dot"> <a href="https://www.linkedin.com/?trk=seo-authwall-base_nav-header-logo"
-                            target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li class="icon-dot"> <a href="https://github.com/BarbaraGB1" target="_blank"><i
+                    <li class="icon-dot"> <a title="Ir a twitter" href="https://twitter.com/barbii_peque"
+                            target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li class="icon-dot"> <a title="Ir a linkedin"
+                            href="https://www.linkedin.com/?trk=seo-authwall-base_nav-header-logo" target="_blank"><i
+                                class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li class="icon-dot"> <a title="Ir a github" href="https://github.com/BarbaraGB1" target="_blank"><i
                                 class="fa-brands fa-github-alt"></i></a></li>
-                    <li> <a href=""><i class="fa-solid fa-envelope"></i></a></li>
+                    <li> <a title=" ir a email" href=""><i class="fa-solid fa-envelope"></i></a></li>
                 </ul>
             </nav>
         </div>
