--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -2,9 +2,9 @@
     <small class="nombre-final">Leap of faith © 2022</small>
     <nav class="nav">
         <ul class="enlaces-final">
-            <li><a class="enlace1" href="./index.html#Equipo">Equipo</a></li>
-            <li><a class="enlace2" href="./index.html#Quienes-somos">Quiénes somos</a></li>
-            <li><a class="enlace3" href="./contact.html" target="_blank">Contacto</a></li>
+            <li><a title="Ir a Equipo" class="enlace1" href="./index.html#Equipo">Equipo</a></li>
+            <li><a title="Ir a Quiénes somos" class="enlace2" href="./index.html#Quienes-somos">Quiénes somos</a></li>
+            <li><a title="Ir a Contacto" class="enlace3" href="./contact.html" target="_blank">Contacto</a></li>
         </ul>
     </nav>
     <a href="./index.html"><img class="logo" src="./assets/images/logo-adalab.png" alt="Logo Adalab"></a>
