--- a/src/html/partials/who_is_who.html
+++ b/src/html/partials/who_is_who.html
@@ -42,7 +42,8 @@
                                 class="fa-brands fa-linkedin-in"></i></a></li>
                     <li class="icon-dot"> <a title="Ir a github" href="https://github.com/bellita85" target="_blank"><i
                                 class="fa-brands fa-github-alt"></i></a></li>
-                    <li> <a href="bellagarcia1985@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+                    <li> <a title="Ir a email" href="bellagarcia1985@gmail.com" target="_blank"><i
+                                class="fa-solid fa-envelope"></i></a>
                     </li>
                 </ul>
             </nav>
@@ -68,7 +69,7 @@
                                 class="fa-brands fa-linkedin-in"></i></a></li>
                     <li class="icon-dot"> <a title="Ir a github" href="https://github.com/mhidalgoma" target="_blank"><i
                                 class="fa-brands fa-github-alt"></i></a></li>
-                    <li> <a href="monicahidalgomartin@gmail.com" target="_blank"><i
+                    <li> <a title=" ir a email" href="monicahidalgomartin@gmail.com" target="_blank"><i
                                 class="fa-solid fa-envelope"></i></a></li>
                 </ul>
             </nav>
