Inserción del vídeo de youtube

--- a/src/html/partials/team.html
+++ b/src/html/partials/team.html
@@ -6,5 +6,11 @@
     <p>Estamos seguras de que el paracaídas de la programación web nos llevará a sitios maravillosos que nunca
         imaginamos antes de saltar. Si quieres conocernos un poco más, sigue leyendo <i
             class="fa-regular fa-face-smile-wink"></i></p>
+    <div class="video">
+        <iframe class="videoyt" width="560" height="315" src="https://www.youtube.com/embed/3ra5XJ30vA4"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+    </div>
     <div class="white-square"></div>
 </section>
