--- a/src/scss/layout/_team.scss
+++ b/src/scss/layout/_team.scss
@@ -25,6 +25,28 @@
   padding-left: 15px;
   padding-right: 15px;
 }
+.video {
+  position: relative;
+  width: 90%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+.videoyt {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media all and (min-width: 1200px) {
+  .video {
+    position: relative;
+    width: 60%;
+    height: 0;
+    padding-bottom: 40%;
+  }
+}
 
 .white-square {
   width: 30px;
