Fijación de los margenes de la sección who is who para pantallas de mas de 1800px

--- a/src/html/partials/who_is_who.html
+++ b/src/html/partials/who_is_who.html
@@ -1,10 +1,12 @@
 <section class="whoiswho">
     <h2 id="Quienes-somos" class="quienes-somos">Quiénes somos</h2>
+
     <article class="complete-person person-left">
         <img class="img-person" src="./assets/images/laura.png" alt="">
         <div>
             <h4 class="whoiswho__title--left">Laura García Cuello</h4>
-            <p class="whoiswho__text">Entusiasta por el cambio y en la búsqueda de aquello que me haga feliz. Vengo de
+            <p class="whoiswho__text">Entusiasta por el cambio y en la búsqueda de aquello que me haga feliz. Vengo
+                de
                 la rama sanitatia y voy directa a la rama de la programación. Descubriendo este apasionante
                 mundo code que se está convirtiendo en mi nueva vocación. Ilusionada con este nuevo comienzo.
             </p>
@@ -27,7 +29,8 @@
         <img class="img-person" src="./assets/images/bella.png" alt="">
         <div>
             <h4 class="whoiswho__title--right">Bella García Villegas</h4>
-            <p class="whoiswho__text">Madre de 2 niñas que se ha ido reinventando a sí misma. Cuando con 37 años sabes
+            <p class="whoiswho__text">Madre de 2 niñas que se ha ido reinventando a sí misma. Cuando con 37 años
+                sabes
                 que estas en un
                 sector y en una empresa que no te puede ofrecer más, tienes 2 opciones: disfrutar la estabilidad
                 que eso te proporciona o decidir que ese no es tu camino y buscar otro que te ofrezca un camino
@@ -79,7 +82,8 @@
         <img class="img-person" src="./assets/images/barbara.png" alt="">
         <div>
             <h4 class="whoiswho__title--right">Bárbara García Bolaños</h4>
-            <p class="whoiswho__text">Curiosa e inquieta. A lo largo de mi vida he tocado muchos palos desde ciencias de
+            <p class="whoiswho__text">Curiosa e inquieta. A lo largo de mi vida he tocado muchos palos desde
+                ciencias de
                 la antigüedad
                 hasta realización de proyectos. Puedo transformarte en un zombie viviente ,gracias a la magia
                 del maquillaje, o dirigirte un documental de tu vida. Ahora estoy luchando para poder
@@ -99,5 +103,6 @@
             </nav>
         </div>
     </article>
+
 
 </section>
