Imagen del hero cambiada

--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,6 +1,6 @@
 /* HERO */
 .hero {
-  background-image: url(../images/jump.png);
+  background-image: url(../images/jump_bn.png);
   background-position: center;
   background-size: 100vh;
   top: 0px;
