--- a/src/html/partials/who_is_who.html
+++ b/src/html/partials/who_is_who.html
@@ -7,7 +7,7 @@
             <h4 class="whoiswho__title--left">Laura García Cuello</h4>
             <p class="whoiswho__text">Entusiasta por el cambio y en la búsqueda de aquello que me haga feliz. Vengo
                 de
-                la rama sanitatia y voy directa a la rama de la programación. Descubriendo este apasionante
+                la rama sanitaria y voy directa a la rama de la programación. Descubriendo este apasionante
                 mundo code que se está convirtiendo en mi nueva vocación. Ilusionada con este nuevo comienzo.
             </p>
             <nav>
@@ -85,7 +85,7 @@
             <p class="whoiswho__text">Curiosa e inquieta. A lo largo de mi vida he tocado muchos palos desde
                 ciencias de
                 la antigüedad
-                hasta realización de proyectos. Puedo transformarte en un zombie viviente ,gracias a la magia
+                hasta realización de proyectos. Puedo transformarte en un zombie viviente,gracias a la magia
                 del maquillaje, o dirigirte un documental de tu vida. Ahora estoy luchando para poder
                 programarte tu próxima página web. ¿ Y de mi que puedo contarte? Estoy en contra del especismo y
                 de todas las discriminaciones.</p>
