Limitar el ancho del texto de la sección EQUIPO

--- a/src/html/partials/team.html
+++ b/src/html/partials/team.html
@@ -1,11 +1,13 @@
 <section class="team">
     <h2 id="Equipo" class="equipo">Equipo</h2>
-    <p>Cuatro coders apasionadas con lo que hacen y con infinitas ganas de aprender y mejorar con cada git push.
-        Venimos de ramas laborales muy diversas pero nos unen las ganas de avanzar y evolucionar, aunque eso
-        suponga dar un salto al vacío para ver qué pasa.</p>
-    <p>Estamos seguras de que el paracaídas de la programación web nos llevará a sitios maravillosos que nunca
-        imaginamos antes de saltar. Si quieres conocernos un poco más, sigue leyendo <i
-            class="fa-regular fa-face-smile-wink"></i></p>
+    <div class="team__text">
+        <p>Cuatro coders apasionadas con lo que hacen y con infinitas ganas de aprender y mejorar con cada git push.
+            Venimos de ramas laborales muy diversas pero nos unen las ganas de avanzar y evolucionar, aunque eso
+            suponga dar un salto al vacío para ver qué pasa.</p>
+        <p>Estamos seguras de que el paracaídas de la programación web nos llevará a sitios maravillosos que nunca
+            imaginamos antes de saltar. Si quieres conocernos un poco más, sigue leyendo <i
+                class="fa-regular fa-face-smile-wink"></i></p>
+    </div>
     <div class="video">
         <iframe class="videoyt" width="560" height="315" src="https://www.youtube.com/embed/3ra5XJ30vA4"
             title="YouTube video player" frameborder="0"
