--- a/src/scss/layout/_team.scss
+++ b/src/scss/layout/_team.scss
@@ -24,8 +24,11 @@
   margin-bottom: 30px;
   padding-left: 15px;
   padding-right: 15px;
+  max-width: 800px;
 }
+
 .video {
+  margin-top: 30px;
   position: relative;
   width: 90%;
   height: 0;
