--- a/src/html/partials/team.html
+++ b/src/html/partials/team.html
@@ -1,9 +1,11 @@
 <section class="team">
     <h2 id="Equipo" class="equipo">Equipo</h2>
-    <p>Cuatro coders apasionadas con lo que hacen y con infinitas ganas de aprender y mejorar con cada git push.
+    <p class="equipo_text">Cuatro coders apasionadas con lo que hacen y con infinitas ganas de aprender y mejorar con
+        cada git push.
         Venimos de ramas laborales muy diversas pero nos unen las ganas de avanzar y evolucionar, aunque eso
         suponga dar un salto al vacío para ver qué pasa.</p>
-    <p>Estamos seguras de que el paracaídas de la programación web nos llevará a sitios maravillosos que nunca
+    <p class="equipo_text"> Estamos seguras de que el paracaídas de la programación web nos llevará a sitios
+        maravillosos que nunca
         imaginamos antes de saltar. Si quieres conocernos un poco más, sigue leyendo <i
             class="fa-regular fa-face-smile-wink"></i></p>
     <div class="video">
