--- a/src/scss/layout/_team.scss
+++ b/src/scss/layout/_team.scss
@@ -38,6 +38,24 @@
   width: 100%;
   height: 100%;
 }
+.white-square {
+  width: 30px;
+  height: 30px;
+  transform: translate(0, 50%) rotate(45deg);
+  z-index: 1;
+  background-color: var(--white);
+}
+
+@media all and (min-width: 780px) {
+  .equipo_text {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .video {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+}
 
 @media all and (min-width: 1200px) {
   .video {
@@ -46,12 +64,4 @@
     height: 0;
     padding-bottom: 40%;
   }
-}
-
-.white-square {
-  width: 30px;
-  height: 30px;
-  transform: translate(0, 50%) rotate(45deg);
-  z-index: 1;
-  background-color: var(--white);
 }
