--- a/src/html/partials/who_is_who.html
+++ b/src/html/partials/who_is_who.html
@@ -19,7 +19,8 @@
                                 class="fa-brands fa-linkedin-in" target="_blank"></i></a></li>
                     <li class="icon-dot"> <a title="Ir a github" href="https://github.com/Garcia-Laura"
                             target="_blank"><i class="fa-brands fa-github-alt" target="_blank"></i></a></li>
-                    <li> <a title=" ir a email" href="lgarciacuello@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+                    <li> <a title=" ir a email" href="mailto:lgarciacuello@gmail.com?subject=subject text">
+                            <i class="fa-solid fa-envelope"></i></a>
                     </li>
                 </ul>
             </nav>
